# ultimate-ladder

./: .env.sample  .gitmodules  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  fly.toml  init.sh  manage.py  pyproject.toml  requirements.txt  run.sh  settings.py  static  urls.py
ladder/: apps.py  forms.py  models.py  urls.py  views.py
ladder/templates/ladder/: base.html  edit_player.html  game.html  game_confirm_delete.html  index.html  league.html  league_confirm_delete.html  leagues.html  player.html  players.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
ultimate/: urls.py  wsgi.py
ultimate/ladder/: forms.py  models.py  urls.py
ultimate/ladder/static/ladder/: style.css
ultimate/ladder/templates/ladder/: edit_league.html  league.html  leagues.html  new_game.html  player_confirm_delete.html  players.html
ultimate/ultimate/: asgi.py  settings.py
ultimate_ladder/: forms.py  models.py  settings.py  urls.py  views.py
ultimate_ladder/static/ultimate_ladder/: style.css
ultimate_ladder/templates/ultimate_ladder/: base.html  edit_league.html  edit_player.html  game.html  game_confirm_delete.html  index.html  league.html  league_confirm_delete.html  leagues.html  new_game.html  player.html  player_confirm_delete.html  players.html
